# isaac_tutorial

./: .gitignore  README.md  isaac_tutorial.sh  solver_comparison.usd
.dvc/: config
config/: README  interactive_scene.py  interactive_scene_cfg.py  lift_cube.py  lift_env_cfg.py
config/actions/: actions_cfg.py  binary_joint_actions.py  gripper_actions.py
config/config/ur10/: __init__.py  ik_abs_env_cfg.py  joint_pos_env_cfg.py
config/config/ur10_bh/: __init__.py  ik_abs_env_cfg.py  joint_pos_env_cfg.py
config/config/ur10_surface/: __init__.py  ik_abs_env_cfg.py  joint_pos_env_cfg.py
config/lab_assets/: __init__.py  gripper.py  universal_robots.py
examples/gym/: dof_controls.py  franka_cube_ik_osc.py  franka_world.py  urdf_viewer.py
examples/gym/dqn_cartpole/: dqn.py  env.py  replay.py  trainer.py
examples/gym/dqn_franka/: dqn.py  (+2 more)
examples/lab/: cartpole_pd_control.py  custom_asset.py  direct_rl_env.py  franka.py  import_asset.py  test.py
examples/sim/: differential_command.py  hello_sim.py  ros2_turtlebot_line_follower.py  simple_robot_control.py
examples/sim/IsaacSim-ros_workspaces/humble_ws/src/isaac_tutorials/: package.xml  setup.py
examples/sim/IsaacSim-ros_workspaces/humble_ws/src/isaac_tutorials/scripts/: pymoveit_example.py  ros2_publisher.py
mesh/: duck.stl
usd/: .asset_hash  .gitignore  duck.dvc  franka.dvc  grippers.dvc  homework_warehouse.usd.dvc  line.png.dvc  nova_carter.usd  nova_carter.usd.dvc  simple_robot.usd.dvc  turtlebot3_burger.usd.dvc  turtlebot3_line_follower.usd  turtlebot3_line_follower.usd.dvc  turtlebot3_navigation.usd  turtlebot3_navigation.usd.dvc  turtlebot3_ros2_bridge.usd  turtlebot3_ros2_bridge.usd.dvc  warehouse.usd.dvc
usd/duck/: .asset_hash  config.yaml  duck.usd  duck_non_metric.usd
usd/franka/: .asset_hash  config.yaml
(+176 files in other folders)
